Tue Nov 07 22:40:58 GMT 2006  Olly Betts <olly@survex.com>

	* net/tcpclient.cc: Turn on TCP_NODELAY for the client too.

Tue Nov 07 21:46:39 GMT 2006  Olly Betts <olly@survex.com>

	* net/tcpserver.cc: Turn on TCP_NODELAY for xapian-tcpsrv which
	  increases throughput for the remote backend over tcp.

Tue Nov 07 21:08:57 GMT 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_btreebase.cc: Add missing '#include'-s.

Tue Nov 07 17:57:22 GMT 2006  Olly Betts <olly@survex.com>

	* backends/quartz/btree_base.cc: Add missing '#include'-s.

Tue Nov 07 05:12:40 GMT 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_positionlist.h,backends/flint/flint_table.cc,
	  backends/quartz/btree.cc: Add missing '#include <vector>' which
	  "utils.h" was implicitly pulling in.
	* common/utils.h: Move '#include "safefcntl.h"' to more logical place.

Tue Nov 07 04:18:27 GMT 2006  Olly Betts <olly@survex.com>

	* common/safefcntl.h: Actually add the new file to SVN.

Tue Nov 07 03:36:59 GMT 2006  Olly Betts <olly@survex.com>

	* HACKING,backends/flint/flint_io.h,backends/flint/flint_lock.cc,
	  backends/flint/flint_lock.h,backends/muscat36/io_system.cc,common/,
	  net/tcpserver.cc,tests/harness/backendmanager.cc,
	  tests/harness/testsuite.cc: Create "safefcntl.h" as a replacement
	  for <fcntl.h> instead of using "utils.h" for this purpose, since
	  "utils.h" pulls in many other things we often don't want.
	* common/utils.cc,common/utils.h,net/progclient.cc: Move split_words
	  to progclient.cc which is the only user of it.  Rewrite it to not
	  modified the string being split which risks being O(n^2).
	* net/progclient.cc,common/progclient.h: Pass std::string by const
	  reference.
	* configure.ac: Fix DJGPP build (fork is present but always fails).

Tue Nov 07 03:21:24 GMT 2006  Olly Betts <olly@survex.com>

	* matcher/biaspostlist.h: Don't need '#include "utils.h"'.

Tue Nov 07 01:15:14 GMT 2006  Olly Betts <olly@survex.com>
